clusters/central-tx-hou-101-fleet1/imdb/imdb/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: imdb
  namespace: imdb
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/istio-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: imdb
            port:
              number: 8080
